Test OMXplayer as SplashScreen